Added Composer dependencies installation to Travis config
Refs #12.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ php:
     - 7.0
 
 before_script:
+    # Install Composer dependencies
+    - composer install -d plib/library
     # Download Codeception package
     - wget http://codeception.com/codecept.phar
 
