Travis-CI should run only unit tests instead of skipping acceptance test(s)
Refs #12.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_script:
     - wget http://codeception.com/codecept.phar
 
 script:
-    - php codecept.phar run
+    - php codecept.phar run unit
