Added suppression of invalid phpmd messages

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ plib/library/vendor/
 /spamexperts-extension.zip
 /composer.phar
 /codecept.phar
+/phpmd.phar
 /plib/library/composer.lock
 
 tests/_output/*
